update to idea files and maker build